--- a/example.css
+++ b/example.css
@@ -67,6 +67,23 @@
   -webkit-transform: translateY(-50%);
   transform: translateY(-50%);
 }
+.otp:not(.mobile) .sidebar .desktop-narrative-container div[class*=TripDetails-sc].with-booking-link {
+  border-bottom: none;
+  margin-bottom: 0;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.otp:not(.mobile) .sidebar .desktop-narrative-container .booking-link {
+  border: 1px solid #003865;
+  border-top: none;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  padding-bottom: 14px;
+  margin-bottom: 14px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .otp .sidebar-footer a {
   color: #212121;
   text-decoration: underline;
